--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -6,7 +6,8 @@ runnable=true
 advanced_options=false
 dedicated_server=false
 custom_features=""
-export_filter="all_resources"
+export_filter="scenes"
+export_files=PackedStringArray("res://scenes/fire.tscn", "res://scenes/gramophone.tscn", "res://scenes/main.tscn", "res://scenes/player.tscn", "res://scenes/tuscany.tscn")
 include_filter=""
 exclude_filter=""
 export_path="docs/index.html"
