--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ dedicated_server=false
 custom_features=""
 export_filter="scenes"
 export_files=PackedStringArray("res://scenes/fire.tscn", "res://scenes/gramophone.tscn", "res://scenes/main.tscn", "res://scenes/player.tscn", "res://scenes/tuscany.tscn")
-include_filter=""
+include_filter="addons/3d_player_controller/states/*.gd"
 exclude_filter=""
 export_path="docs/index.html"
 encryption_include_filters=""
