--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,8 +7,8 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="scenes"
-export_files=PackedStringArray("res://scenes/fire.tscn", "res://scenes/gramophone.tscn", "res://scenes/main.tscn", "res://scenes/player.tscn", "res://scenes/tuscany.tscn")
-include_filter="addons/3d_player_controller/states/*.gd"
+export_files=PackedStringArray("res://scenes/fire.tscn", "res://scenes/gramophone.tscn", "res://scenes/main.tscn", "res://scenes/tuscany.tscn")
+include_filter="*.mp3, *.wav"
 exclude_filter=""
 export_path="docs/index.html"
 encryption_include_filters=""
